--- a/footy-picks-fe/public/index.html
+++ b/footy-picks-fe/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Footy Picks</title>
   </head>
-  <body>
+  <body style="background-color: #101010;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
